# tomlparams

./: .flake8  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  LICENSE  README.md  __init__.py  captureoutput.py  defaults_as_dir.toml  defaults_as_file.toml  paramsgroup.py  pyproject.toml  requirements.txt  test_xparams.py  utils.py  xparams.py
.github/workflows/: push.yml  push_main.yml  tests.yml
doc/source/: conf.py  index.md  tomlparams.md
doc/source/_static/: custom.css
doc/source/img/: tomlparamslogo.key.tgz
examples/: example.py
examples/in_params/: retirees.toml  uk.toml  uk_banks.toml  uk_retirees.toml
examples/out_params/: final.toml
examples/readme/: base.toml  defaults2.toml  hier.toml  newparam.toml  one.toml  readme1.py  readme2.py  readme3.py  readme4.py  three.toml  two.toml
testdata/expected/: one.toml  two.toml  unchanged.toml
testdata/xparams/: deep.toml  five.toml  four.toml  one.toml  self.toml  two.toml  type_check_deeper_level.toml  type_check_root_level.toml
tests/: captureoutput.py  test_tomlparams.py  test_xparams.py
tests/testdata/expected/: self.toml  three.toml
tests/testdata/tomlparams/: two.toml
tests/testdata/xparams/: five.toml  one.toml  self.toml  three.toml  type_check_list.toml  type_check_shallow.toml
tomlparams/: __init__.py  console.py  params_group.py  parse_helpers.py  tomlparams.py  utils.py
tomlparams/examples/readme/: defaults.toml  hier.toml  one.toml  readme1.py  readme2.py  readme3.py  readme4.py
tomlparams/tests/: captureoutput.py  test_parse_helpers.py  test_tomlparams.py  test_utils.py
tomlparams/tests/testdata/expected/: deep.toml  saveable.toml  unchanged.toml
tomlparams/tests/testdata/tomlparams/: deep.toml  defaults_as_file.toml  table_array_defaults.toml  type_check_dates.toml
tomlparams/tests/testdata/tomlparams/defaults/: human.toml
tomlparams/tests/testdata/tomlparams/defaults/animals/fish/: salmon.toml  tuna.toml
tomlparams/tests/testdata/tomlparams/defaults/animals/fishes/: salmon.toml
tomlparams/tests/testdata/tomlparams/defaults/funghi/: chytridiomycota.toml
tomlparams/tests/testdata/tomlparams/defaults_as_dir/animals/: birds.toml
tomlparams/tests/testdata/tomlparams/defaults_as_dir/funghi/: ascomycota.toml
tomlparams/tests/testdata/tomlparams/defaults_as_dir/fungi/: ascomycota.toml  chytridiomycota.toml
tomlparams/tests/testdata/tomlparams/defaults_as_dir_repeated_keys/: stinky-human.toml
tomlparams/tests/testdata/tomlparams/defaults_as_dir_repeated_keys/animals/fish/: tuna.toml
tomlparams/tests/testdata/usertomlparams/: table_array_longer.toml  table_array_same_length.toml  table_array_shorter.toml
xparams/: __init__.py  errors_warnings.py  params_group.py  paramsgroup.py  parse_helpers.py  parsemismatch.py  tomlparams.py  utils.py  xparams.py
